script and code:blocks project updates
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4814 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -151,7 +151,8 @@ alias toggleshowmap [ showmap 1; onrelease [ showmap 0 ] ]
 // arg5 1: private mode
 // arg6 1: banned, 2: blacklisted 3: both
 // arg7 "server description"
-//alias sbconnect [ echo connecting to $arg7 ; connect $arg1 $arg2 ]
+// TODO: interpret a#3,4,5,6 [ft:any1:2010apr04]
+alias sbconnect [ echo connecting to $arg7 ; connect $arg1 $arg2 ]
 
 // For those players who use IRC too much...
 alias join "connect $arg1 $arg2 $arg3"
