--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -12,10 +12,11 @@ menuitem "Reset all settings"                          [ showmenu "Reset setting
 newmenu Weapons
 
 menumdl weapons/assault/menu mapmodel 75 12
-menuitem "MTP-57 Assault Rifle"			"nextprimary 5;echo MTP-57 Assault Rifle selected" "chmenumdl Weapons weapons/assault/menu mapmodel 75 12"
-menuitem "A-ARD/10 Submachine Gun"		"nextprimary 3;echo A-ARD/10 Submachine Gun selected" "chmenumdl Weapons weapons/subgun/menu mapmodel 75 12"
-menuitem "Precision Tech AD-81 Sniper Rifle"     "nextprimary 4;echo Precision Tech AD-81 Sniper Rifle selected" "chmenumdl Weapons weapons/sniper/menu mapmodel 75 12"
-menuitem "V-19 Combat Shotgun"			"nextprimary 2;echo V-19 Combat Shotgun selected" "chmenumdl Weapons weapons/shotgun/menu mapmodel 75 12"
+menuitem "MTP-57 Assault Rifle"			"nextprimary 6;echo MTP-57 Assault Rifle selected" "chmenumdl Weapons weapons/assault/menu mapmodel 75 12"
+menuitem "A-ARD/10 Submachine Gun"		"nextprimary 4;echo A-ARD/10 Submachine Gun selected" "chmenumdl Weapons weapons/subgun/menu mapmodel 75 12"
+menuitem "Precision Tech AD-81 Sniper Rifle"     "nextprimary 5;echo Precision Tech AD-81 Sniper Rifle selected" "chmenumdl Weapons weapons/sniper/menu mapmodel 75 12"
+menuitem "V-19 Combat Shotgun"			"nextprimary 3;echo V-19 Combat Shotgun selected" "chmenumdl Weapons weapons/shotgun/menu mapmodel 75 12"
+menuitem "TMP-M&A Carbine"			"nextprimary 2;echo TMP-M&A Carbine selected" "chmenumdl Weapons weapons/rifle/menu mapmodel 75 12"
 
 newmenu CLA
 
