Linking the sound to the carbine. The file carbine.ogg is a contribution of Robtics.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4860 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -14,84 +14,86 @@ registersound "weapon/waterimpact"        // 6 - S_BULLETWATERHIT
 registersound "weapon/knife"              // 7 - S_KNIFE
 registersound "weapon/usp"                // 8 - S_PISTOL
 registersound "weapon/pistol_reload"      // 9 - S_RPISTOL
-registersound "weapon/shotgun"            // 10 - S_SHOTGUN
-registersound "weapon/shotgun_reload"     // 11 - S_RSHOTGUN
-registersound "weapon/sub"                // 12 - S_SUBGUN
-registersound "weapon/sub_reload"         // 13 - S_RSUBGUN
-registersound "weapon/sniper"             // 14 - S_SNIPER
-registersound "weapon/sniper_reload"      // 15 - S_RSNIPER
-registersound "weapon/auto"               // 16 - S_ASSAULT
-registersound "weapon/auto_reload"        // 17 - S_RASSAULT
-registersound "misc/pickup_ammo_clip"     // 18 - S_ITEMAMMO
-registersound "misc/pickup_health"        // 19 - S_ITEMHEALTH
-registersound "misc/pickup_armour"        // 20 - S_ITEMARMOUR
-registersound "misc/tick9"                // 21 - S_ITEMPUP
-registersound "weapon/clip_empty"         // 22 - S_NOAMMO
-registersound "misc/tick11"               // 23 - S_PUPOUT
-registersound "player/pain1"              // 24 - S_PAIN1
-registersound "player/pain2"              // 25 - S_PAIN2
-registersound "player/pain3"              // 26 - S_PAIN3
-registersound "player/pain4"              // 27 - S_PAIN4
-registersound "player/pain5"              // 28 - S_PAIN5
-registersound "player/pain6"              // 29 - S_PAIN6
-registersound "player/die1"               // 30 - S_DIE1
-registersound "player/die2"               // 31 - S_DIE2
-registersound "weapon/grenade_exp"        // 32 - S_FEXPLODE
-registersound "player/splash1"            // 33 - S_SPLASH1
-registersound "player/splash2"            // 34 - S_SPLASH2
-registersound "ctf/flagdrop"              // 35 - S_FLAGDROP
-registersound "ctf/flagpickup"            // 36 - S_FLAGPICKUP
-registersound "ctf/flagreturn"            // 37 - S_FLAGRETURN
-registersound "ctf/flagscore"             // 38 - S_FLAGSCORE
-registersound "weapon/grenade_pull"       // 39 - S_GRENADEPULL
-registersound "weapon/grenade_throw"      // 40 - S_GRENADETHROW
-registersound "weapon/grenade_bounce1"    // 41 - S_GRENADEBOUNCE1
-registersound "weapon/grenade_bounce2"    // 42 - S_GRENADEBOUNCE2
-registersound "weapon/pistol_akreload"    // 43 - S_RAKIMBO
-registersound "misc/change_gun"           // 44 - S_GUNCHANGE
-registersound "misc/impact_t"             // 45 - S_HITSOUND
-registersound "player/gib"                // 46 - S_GIB
-registersound "misc/headshot" 10          // 47 - S_HEADSHOT
-registersound "misc/vote/vote_call"       // 48 - S_CALLVOTE
-registersound "misc/vote/vote_pass"       // 49 - S_VOTEPASS
-registersound "misc/vote/vote_fail"       // 50 - S_VOTEFAIL
-registersound "player/footsteps" 40 1 20  // 51 - S_FOOTSTEPS
-registersound "player/crouch" 40 1 10     // 52 - S_FOOTSTEPSCROUCH
-registersound "player/watersteps" 40 1 20 // 53 - S_WATERFOOTSTEPS
-registersound "player/watercrouch" 40 1 10// 54 - S_WATERFOOTSTEPSCROUCH
-registersound "player/crouch_in" 85 0 14  // 55 - S_CROUCH
-registersound "player/crouch_out" 75 0 14 // 56 - S_UNCROUCH
-registersound "misc/menu_click1"          // 57 - S_MENUSELECT
-registersound "misc/menu_click2"          // 58 - S_MENUENTER
-registersound "player/underwater"         // 59 - S_UNDERWATER
-registersound "misc/tinnitus" 2           // 60 - S_TINNITUS
+registersound "weapon/rifle"              // 10 - S_RIFLE
+registersound "weapon/rifle_reload"       // 11 - S_RRIFLE // temporary
+registersound "weapon/shotgun"            // 12 - S_SHOTGUN
+registersound "weapon/shotgun_reload"     // 13 - S_RSHOTGUN
+registersound "weapon/sub"                // 14 - S_SUBGUN
+registersound "weapon/sub_reload"         // 15 - S_RSUBGUN
+registersound "weapon/sniper"             // 16 - S_SNIPER
+registersound "weapon/sniper_reload"      // 17 - S_RSNIPER
+registersound "weapon/auto"               // 18 - S_ASSAULT
+registersound "weapon/auto_reload"        // 19 - S_RASSAULT
+registersound "misc/pickup_ammo_clip"     // 20 - S_ITEMAMMO
+registersound "misc/pickup_health"        // 21 - S_ITEMHEALTH
+registersound "misc/pickup_armour"        // 22 - S_ITEMARMOUR
+registersound "misc/tick9"                // 23 - S_ITEMPUP
+registersound "weapon/clip_empty"         // 24 - S_NOAMMO
+registersound "misc/tick11"               // 25 - S_PUPOUT
+registersound "player/pain1"              // 26 - S_PAIN1
+registersound "player/pain2"              // 27 - S_PAIN2
+registersound "player/pain3"              // 28 - S_PAIN3
+registersound "player/pain4"              // 29 - S_PAIN4
+registersound "player/pain5"              // 30 - S_PAIN5
+registersound "player/pain6"              // 31 - S_PAIN6
+registersound "player/die1"               // 32 - S_DIE1
+registersound "player/die2"               // 33 - S_DIE2
+registersound "weapon/grenade_exp"        // 34 - S_FEXPLODE
+registersound "player/splash1"            // 35 - S_SPLASH1
+registersound "player/splash2"            // 36 - S_SPLASH2
+registersound "ctf/flagdrop"              // 37 - S_FLAGDROP
+registersound "ctf/flagpickup"            // 38 - S_FLAGPICKUP
+registersound "ctf/flagreturn"            // 39 - S_FLAGRETURN
+registersound "ctf/flagscore"             // 40 - S_FLAGSCORE
+registersound "weapon/grenade_pull"       // 41 - S_GRENADEPULL
+registersound "weapon/grenade_throw"      // 42 - S_GRENADETHROW
+registersound "weapon/grenade_bounce1"    // 43 - S_GRENADEBOUNCE1
+registersound "weapon/grenade_bounce2"    // 44 - S_GRENADEBOUNCE2
+registersound "weapon/pistol_akreload"    // 45 - S_RAKIMBO
+registersound "misc/change_gun"           // 46 - S_GUNCHANGE
+registersound "misc/impact_t"             // 47 - S_HITSOUND
+registersound "player/gib"                // 48 - S_GIB
+registersound "misc/headshot" 10          // 49 - S_HEADSHOT
+registersound "misc/vote/vote_call"       // 50 - S_CALLVOTE
+registersound "misc/vote/vote_pass"       // 51 - S_VOTEPASS
+registersound "misc/vote/vote_fail"       // 52 - S_VOTEFAIL
+registersound "player/footsteps" 40 1 20  // 53 - S_FOOTSTEPS
+registersound "player/crouch" 40 1 10     // 54 - S_FOOTSTEPSCROUCH
+registersound "player/watersteps" 40 1 20 // 55 - S_WATERFOOTSTEPS
+registersound "player/watercrouch" 40 1 10// 56 - S_WATERFOOTSTEPSCROUCH
+registersound "player/crouch_in" 85 0 14  // 57 - S_CROUCH
+registersound "player/crouch_out" 75 0 14 // 58 - S_UNCROUCH
+registersound "misc/menu_click1"          // 59 - S_MENUSELECT
+registersound "misc/menu_click2"          // 60 - S_MENUENTER
+registersound "player/underwater"         // 61 - S_UNDERWATER
+registersound "misc/tinnitus" 2           // 62 - S_TINNITUS
 
                         // In-game voice coms
-registersound "voicecom/affirmative"            // 61
-registersound "voicecom/allrightsir"            // 62
-registersound "voicecom/comeonmove"             // 63
-registersound "voicecom/cominginwiththeflag"    // 64
-registersound "voicecom/coverme"                // 65
-registersound "voicecom/defendtheflag"          // 66
-registersound "voicecom/enemydown"              // 67
-registersound "voicecom/gogetemboys"            // 68
-registersound "voicecom/goodjobteam"            // 69
-registersound "voicecom/igotone"                // 70
-registersound "voicecom/imadecontact"           // 71
-registersound "voicecom/imattacking"            // 72
-registersound "voicecom/imondefense"            // 73
-registersound "voicecom/imonyourteamman"        // 74
-registersound "voicecom/negative"               // 75
-registersound "voicecom/nocando"                // 76
-registersound "voicecom/recovertheflag"         // 77
-registersound "voicecom/sorry"                  // 78
-registersound "voicecom/spreadout"              // 79
-registersound "voicecom/stayhere"               // 80
-registersound "voicecom/staytogether"           // 81
-registersound "voicecom/theresnowaysir"         // 82
-registersound "voicecom/wedidit"                // 83
-registersound "voicecom/yes"                    // 84
-registersound "voicecom/niceshot"               // 85
+registersound "voicecom/affirmative"            // 63
+registersound "voicecom/allrightsir"            // 64
+registersound "voicecom/comeonmove"             // 65
+registersound "voicecom/cominginwiththeflag"    // 66
+registersound "voicecom/coverme"                // 67
+registersound "voicecom/defendtheflag"          // 68
+registersound "voicecom/enemydown"              // 69
+registersound "voicecom/gogetemboys"            // 70
+registersound "voicecom/goodjobteam"            // 71
+registersound "voicecom/igotone"                // 72
+registersound "voicecom/imadecontact"           // 73
+registersound "voicecom/imattacking"            // 74
+registersound "voicecom/imondefense"            // 75
+registersound "voicecom/imonyourteamman"        // 76
+registersound "voicecom/negative"               // 77
+registersound "voicecom/nocando"                // 78
+registersound "voicecom/recovertheflag"         // 79
+registersound "voicecom/sorry"                  // 80
+registersound "voicecom/spreadout"              // 81
+registersound "voicecom/stayhere"               // 82
+registersound "voicecom/staytogether"           // 83
+registersound "voicecom/theresnowaysir"         // 84
+registersound "voicecom/wedidit"                // 85
+registersound "voicecom/yes"                    // 86
+registersound "voicecom/niceshot"               // 87
 
                         // Music
 registermusic "pingpong/03-pp-kamikadze"        // M_FLAGGRAB
