fixing the altaction_8 for akimbo, and letting the nade be "quick threw" by right button
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4866 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -92,9 +92,9 @@ alias altaction [
     (concatword altaction_ (curweapon))
 ]
 
-loop i 8 [ alias (concatword altaction_ $i) quicknadethrow ] // Quick nade throw is default
+loop i 9 [ alias (concatword altaction_ $i) quicknadethrow ] // Quick nade throw is default
 alias altaction_5 [ zoom 1; onrelease [ zoom 0 ] ] // Sniper
-alias altaction_7 [ attack ] // Grenade 
+//alias altaction_7 [ attack ] // Grenade // with this comment, you throw the nade and the nade is unselected : Brahma
 
 alias oldsens $sensitivity
 
