Fix menus/docs, re: showstats command.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4909 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -2400,12 +2400,6 @@ docargument [V] [] [min 0/max 1/default 0];
 
 
 
-docident [hidestats] [Turns on/off display of fps/rendering stats on the HUD.];
-
-docargument [B] [Turns the stats off (1) or on (0)] [min 0/max 1/default 1];
-
-
-
 docident [hideteam] [];
 
 docargument [V] [] [min 0/max 1/default 0];
@@ -2501,6 +2495,12 @@ docargument [V] [] [min 0/max 1/default 0];
 docident [righthanded] [Choose player hand to carry the weapon.];
 
 docargument [N] [0: lefty, 1: righty] [min 0/max 1/default 1];
+
+
+
+docident [showstats] [Turns on/off display of FPS/rendering statistics on the HUD.];
+
+docargument [N] [0: Show no stats, 1: Only show FPS stats, 2: Show all stats] [min 0/max 2/default 1];
 
 
 
@@ -3909,7 +3909,6 @@ docargument [G] [Green colour intensity] [Between 1 and 255] [0];
 docargument [B] [Blue colour intensity] [Between 1 and 255] [0];
 
 docremark [You must define all 3 values, otherwise this command may not work correctly (use "1" as a placeholder if needed).];
-
 
 
 
