--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -378,7 +378,7 @@ alias reducedviolencemode [
 newmenu HUD
 
 menuitem "Show:" -1
-menuitemcheckbox "   Graphics statistics " "(= $hidestats 0)" "hidestats (= $arg1 0)"
+menuitemslider   "   Graphics statistics: " 0 2 [ $showstats ] 1 [ "None" "FPS Only" "All" ] [ showstats $arg1 ]
 menuitemcheckbox "   Gun " "$hudgun" "hudgun $arg1"
 menuitemcheckbox "   Radar " "(= $hideradar 0)" "hideradar (= $arg1 0)"
 menuitemcheckbox "   Team icon " "(= $hideteam 0)" "hideteam (= $arg1 0)"
