Carbine sounds, and testing 15 dmg for smg
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4911 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -14,7 +14,7 @@ registersound "weapon/waterimpact"        // 6 - S_BULLETWATERHIT
 registersound "weapon/knife"              // 7 - S_KNIFE
 registersound "weapon/usp"                // 8 - S_PISTOL
 registersound "weapon/pistol_reload"      // 9 - S_RPISTOL
-registersound "weapon/rifle"              // 10 - S_RIFLE
+registersound "weapon/carbine_alt"        // 10 - S_RIFLE
 registersound "weapon/rifle_reload"       // 11 - S_RRIFLE // temporary
 registersound "weapon/shotgun"            // 12 - S_SHOTGUN
 registersound "weapon/shotgun_reload"     // 13 - S_RSHOTGUN
