Update editing menus -> Helmet
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4928 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -79,6 +79,7 @@ menuitem "Health"		"newent health"
 menuitem "Pistol Magazine"	"newent pistol"
 menuitem "Box of Ammo"		"newent ammobox"
 menuitem "Kevlar Vest"		"newent armour"
+menuitem "Helmet"		"newent helmet"
 menuitem "Akimbo"		"newent akimbo"
 menuitem "Grenades"		"newent grenades"
 
@@ -128,10 +129,10 @@ menuitem "Change watercolour"			[ showmenu "Water colour" ]
 menuitem "Print entity stats"			"entstats"
 menuitem "Select the next closest entity"	"nextclosestent"
 menuitemcheckbox "Show mapmodel clippings: " "$showmodelclipping" "showmodelclipping $arg1"
-menuitemslider "Select only these entities: " 0 13 "$_closestenttypestatus" 1 "All Light Playerstart Pistol Ammobox Grenades Health Armour Akimbo Mapmodel Ladder CTF-flag Sound Clip" "_closestentslider $arg1"
+menuitemslider "Select only these entities: " 0 14 "$_closestenttypestatus" 1 "All Light Playerstart Pistol Ammobox Grenades Health Armour Akimbo Mapmodel Ladder CTF-flag Sound Clip Helmet" "_closestentslider $arg1"
 
 // "closestenttype" slider...
-alias _closestentslider [ closestenttype (at ["" light playerstart pistol ammobox grenades health armour akimbo mapmodel ladder ctf-flag sound clip] $arg1); alias _closestenttypestatus $arg1 ]
+alias _closestentslider [ closestenttype (at ["" light playerstart pistol ammobox grenades health armour akimbo mapmodel ladder ctf-flag sound clip helmet] $arg1); alias _closestenttypestatus $arg1 ]
 
 // Map-message edit/creation menu
 alias menumapmsg [ if (= (strcmp (getmapmsg) "Untitled Map by Unknown") 1) [ showmenu "Create a map message" ] [ showmenu "Edit a map message" ] ]
