--- a/ac/config/securemaps.cfg
+++ b/ac/config/securemaps.cfg
@@ -15,6 +15,7 @@ securemap ac_gothic
 securemap ac_iceroad
 securemap ac_keller
 securemap ac_mines
+securemap ac_outpost
 securemap ac_power
 securemap ac_rattrap
 securemap ac_scaffold
