Docs/Menus stuff for the helmet
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4929 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -1586,7 +1586,7 @@ docremark [For example 'entproperty 0 2' when executed near a lightsource would 
 
 docident [entset] [Edits the closest entity.];
 
-docargument [type] [the entity type] [light, sound, clip, playerstart, clips, ammobox, grenades, health, armour, akimbo, mapmodel, ladder, ctf-flag] [0];
+docargument [type] [the entity type] [light, sound, clip, playerstart, clips, ammobox, grenades, health, armour, akimbo, mapmodel, ladder, ctf-flag, helmet] [0];
 
 docargument [value1] [see newent 'type'] [] [0];
 
@@ -1712,7 +1712,7 @@ docargument [dZ] [z-offset] [] [0];
 
 docident [newent] [Adds a new entity];
 
-docargument [type] [the entity type] [light, sound, clip, playerstart, pistol, ammobox, grenades, health, armour, akimbo, mapmodel, ladder, ctf-flag] [0];
+docargument [type] [the entity type] [light, sound, clip, playerstart, pistol, ammobox, grenades, health, armour, akimbo, mapmodel, ladder, ctf-flag, helmet] [0];
 
 docargument [value1] [see newent 'type'] [] [0];
 
@@ -1767,6 +1767,10 @@ docident [newent grenades] [Adds a new grenades item.];
 
 
 docident [newent health] [Adds a new health item.];
+
+
+
+docident [newent helmet] [Adds a new helmet item.];
 
 
 
