--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -30,7 +30,7 @@ loop i (listlen $mapcommands) [
 
 complete demo "demos" dmo
 
-alias entcomplete [listcomplete $arg1 "light playerstart pistol ammobox grenades health armour akimbo mapmodel ladder ctf-flag sound clip plclip"]
+alias entcomplete [listcomplete $arg1 "light playerstart pistol ammobox grenades health armour akimbo mapmodel ladder ctf-flag sound clip plclip helmet"]
 entcomplete newent
 entcomplete clearents
 entcomplete closestenttype
